<resources>
    <string name="app_name">Car Trader</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="customer_information">Customer Information</string>
    <string name="first_name_text">First Name:</string>
    <string name="first_name">First Name</string>
    <string name="last_name_text">Last Name:</string>
    <string name="last_name">Last Name</string>
    <string name="username_text">Username:</string>
    <string name="address_text">Address:</string>
    <string name="address">Address</string>
    <string name="city_text">City:</string>
    <string name="city">City</string>
    <string name="postal_code_text">Postal Code:</string>
    <string name="postal_code">Postal Code</string>
    <string name="submit">Submit</string>
    <string name="update_customer_information">Update Customer Information</string>
    <string name="password_text">Password:</string>
    <string name="update">Update</string>
    <string name="welcome_to_the_car_trader_app">Welcome to the Car Trader App</string>
    <string name="login_to_explore_the_car_world">Login to explore the car world!!</string>
</resources>
