<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDE8ED"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_car_trader_app"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:text="@string/login_to_explore_the_car_world"/>

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:textAlignment="gravity"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="203dp" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="gravity"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="278dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="175dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="120dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="200dp"
        android:textAlignment="center"
        android:text="Not an existing user? Please signup!"/>
    <Button
        android:id="@+id/signupButton"
        android:layout_width="175dp"
        android:layout_height="49dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>